--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "kodeine/laravel-acl": "^2.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^2.0",
-        "laravelcollective/html": "^6.1"
+        "laravelcollective/html": "^6.1",
+        "tucker-eric/eloquentfilter": "^2.3",
+        "unisharp/laravel-filemanager": "^2.1",
+        "van-ons/laraberg": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
